k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sports-store
  labels:
    pod-security.kubernetes.io/enforce: baseline
